--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-    </script>
-    <link rel="stylesheet" type="text/css" th:href="@{static/styles.css}" />
-<!--    pra conseguir funfar o css nessa bagaça tem que fazer a classe WebConfig!!!-->
-
-<!--        <link rel="stylesheet" th:href="@{styles.css}" />-->
-
     <title>HomePage</title>
 </head>
-    <h1>Todos os arquivos html seão guardados aqui na templates</h1>
-    <h2>Só mandar bala </h2>
 <body>
-<form>
-    <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+<h1>Entrar na Fila de consultas</h1>
+<h2>Preencha os campos</h2>
+<br><br>
+<form th:action="@{/register}" th:method="post" th:object="${pacientes}">
+    <label for="nome">Nome</label>
+    <input type="text" th:field="*{nome}"><br>
 
+    <label for="contato">Contato</label>
+    <input type="text" th:field="*{contato}"><br>
+
+    <label for="endereco">Endereço</label>
+    <input type="text" th:field="*{endereco}"><br>
+
+    <label for="historico_medico">Histórico Médico</label>
+    <input type="text" th:field="*{historico_medico}"><br>
+
+    <button type="submit">Entrar</button>
+</form>
 </body>
 </html>
